--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@
 @use "object/component/line";
 @use "object/component/bg";
 @use "object/component/form";
+@use "object/component/overlay";
 
 /* Project */
 @use "object/project/header";
