--- a/scss/object/project/_mainvisual.scss
+++ b/scss/object/project/_mainvisual.scss
@@ -1,10 +1,14 @@
+@use "../../foundation/mixin" as m;
+
 .p-mainvisual {
     height: 415px;
     width: 100%;
     background-image: url(../../../img/mainvisual-pc.jpg);
-    // background-position: center;
     display: flex;
-    align-items: center;
+    align-items: center; 
+    @include m.mq( tablet ) {
+        height: 230px;
+    }
     &__title {
         font-size: 31px;
         padding-left: 5.53%;
