--- a/scss/object/project/_search-form.scss
+++ b/scss/object/project/_search-form.scss
@@ -1,4 +1,5 @@
 @use "../../foundation/variable" as v;
+@use "../../foundation/mixin" as m;
 
 .p-search-form {
    width: 35%;
@@ -7,6 +8,9 @@
    margin-right: 2%;
    display: flex;
    justify-content: space-between;
+   @include m.mq( tablet ) {
+      width: 65.5%;
+   }
    &::before {
       content: "";
       width: 23px;           /* アイコンの横幅 */
