--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ li {
 @media (max-width: 834px) {
   .l-grid__item3 {
     position: fixed;
-    z-index: 999;
+    z-index: 200;
     top: 0;
     right: -100%;
     -webkit-transition: all 0.6s;
@@ -39,7 +39,7 @@ li {
   .l-grid__item3.open {
     -webkit-transform: translate3d(-44vw, 0, 0);
             transform: translate3d(-44vw, 0, 0);
-    z-index: 999;
+    z-index: 200;
     height: 100vh;
     overflow: auto;
   }
@@ -62,11 +62,11 @@ li {
 
 .c-text__ttl--ja {
   font-family: "M+ Type-1 (general-j) Bold";
-  /* 見出し 日本語 */
+  /* 見出し 日本語（太字） */
 }
 .c-text__ttl--e {
   font-family: "Roboto";
-  /* 見出し 英語 */
+  /* 見出し 英語（太字） */
 }
 .c-text--ja {
   font-family: "M+ Type-1 (general-j) Regular";
@@ -77,7 +77,7 @@ li {
   /* テキスト 英語 */
 }
 
-h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__button) {
+h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   color: #fff;
 }
 
@@ -93,6 +93,9 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
   background-repeat: no-repeat;
   background-position: center;
 }
+.c-bg--white {
+  background-color: rgba(255, 255, 255, 0.8);
+}
 
 .c-form__input {
   border: 1px solid #707070;
@@ -107,6 +110,12 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
   /* 角丸 */
 }
 
+.c-button {
+  cursor: pointer;
+  font-family: "Roboto";
+  /* 見出し 英語（太字） */
+}
+
 .c-overlay {
   display: none;
   position: fixed;
@@ -117,7 +126,7 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 50;
+  z-index: 100;
 }
 
 .p-header {
@@ -161,25 +170,22 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
     margin-bottom: 4%;
   }
 }
-.p-header__button {
-  display: none;
-}
-@media (max-width: 834px) {
-  .p-header__button {
-    cursor: pointer;
-    display: block;
-    position: absolute;
-    top: 8.3%;
-    right: 3%;
-    font-size: 27px;
-  }
-}
 
 .p-sidebar {
   width: 100%;
   background-color: #F2EDE9;
   color: #707070;
   padding-left: 12.5%;
+}
+@media (max-width: 834px) {
+  .p-sidebar {
+    padding-left: 5.5vw;
+  }
+}
+@media (max-width: 640px) {
+  .p-sidebar {
+    padding-left: 10vw;
+  }
 }
 .p-sidebar__logo {
   margin-top: 63px;
@@ -199,6 +205,9 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
 .p-sidebar__li:first-child {
   padding-top: 0;
 }
+.p-sidebar__sub-ul:last-child .p-sidebar__sub-li:last-child {
+  padding-bottom: 27px;
+}
 .p-sidebar__sub-li {
   padding-left: 7%;
   padding-bottom: 16.6px;
@@ -206,6 +215,16 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
 }
 .p-sidebar__sub-li:last-child {
   padding-bottom: 6.6px;
+}
+@media (max-width: 834px) {
+  .p-sidebar__sub-li {
+    padding-left: 2vw;
+  }
+}
+@media (max-width: 640px) {
+  .p-sidebar__sub-li {
+    padding-left: 3.5vw;
+  }
 }
 .p-sidebar a {
   color: #707070;
@@ -332,7 +351,6 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
   margin-left: 3.5%;
 }
 .p-food-menu__ul {
-  min-height: 642px;
   color: #3C2A10;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -363,16 +381,6 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
   width: 40%;
   background-position: top center;
   background-repeat: no-repeat;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 @media (max-width: 834px) {
   .p-food-menu__li {
@@ -402,8 +410,23 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
     margin-top: 20px;
   }
 }
+.p-food-menu__li a {
+  min-height: 642px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  color: #3C2A10;
+}
 .p-food-menu__dl {
-  background-color: rgba(255, 255, 255, 0.8);
   margin: 3.2%;
   padding: 13px 4.27% 13px 3.24%;
 }
@@ -480,6 +503,61 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo):not(.p-header__butto
     width: 100%;
     height: 60%;
   }
+}
+
+.p-menu-button__open {
+  display: none;
+  color: #707070;
+}
+@media (max-width: 834px) {
+  .p-menu-button__open {
+    display: block;
+    position: absolute;
+    top: 8.3%;
+    right: 3%;
+    font-size: 27px;
+  }
+}
+.p-menu-button__close {
+  visibility: hidden;
+  position: fixed;
+  top: 3%;
+  right: 3%;
+  height: 32px;
+  z-index: 999;
+}
+.p-menu-button__close div {
+  position: relative;
+  width: 32px;
+}
+.p-menu-button__close div span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  display: block;
+  background: #707070;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.p-menu-button__close div span:nth-child(1) {
+  top: 10px;
+}
+.p-menu-button__close div span:nth-child(2) {
+  top: 20px;
+}
+.p-menu-button__close.active {
+  visibility: visible;
+}
+.p-menu-button__close.active span:nth-child(1) {
+  top: 11px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.p-menu-button__close.active span:nth-child(2) {
+  top: 11px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 /* ==========================================================================
