--- a/scss/object/component/_bg.scss
+++ b/scss/object/component/_bg.scss
@@ -2,4 +2,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    &--white {
+        background-color: rgba(255,255,255,0.8);
+    }
 }
