--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@
 @use "object/component/line";
 @use "object/component/bg";
 @use "object/component/form";
+@use "object/component/button";
 @use "object/component/overlay";
 
 /* Project */
@@ -33,6 +34,7 @@
 @use "object/project/mainvisual";
 @use "object/project/food-menu";
 @use "object/project/access";
+@use "object/project/menu-button";
 
 /* Utility */
 // @use "object/utility";
