--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   .p-header__logo {
     font-size: 31.36px;
     margin-left: 0;
-    margin-bottom: 4%;
+    margin-bottom: 29px;
   }
 }
 
@@ -411,7 +411,7 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   }
 }
 .p-food-menu__li a {
-  min-height: 642px;
+  min-height: 900px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -425,6 +425,11 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   width: 100%;
   height: 100%;
   color: #3C2A10;
+}
+@media (max-width: 834px) {
+  .p-food-menu__li a {
+    min-height: 600px;
+  }
 }
 .p-food-menu__dl {
   margin: 3.2%;
@@ -472,10 +477,19 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   padding-bottom: 52.5px;
   margin-left: 12.69%;
 }
+@media (max-width: 834px) {
+  .p-access__wrapper {
+    width: 90%;
+    margin: 0 5%;
+    padding: 30px 0;
+  }
+}
 @media (max-width: 640px) {
   .p-access__wrapper {
     position: relative;
     z-index: 100;
+    width: 80%;
+    margin: 0 10%;
   }
 }
 .p-access__title {
@@ -487,6 +501,11 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   padding-bottom: 0;
   margin-top: 43.5px;
   margin-bottom: 49.8px;
+}
+@media (max-width: 834px) {
+  .p-access__line {
+    margin: 15px 0;
+  }
 }
 .p-access__text {
   font-family: "M+ Type-1 (general-j) Bold";
