--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -21,19 +21,7 @@
         @include m.mq( tablet ) {
             font-size: 31.36px;
             margin-left: 0;
-            margin-bottom: 4%;
+            margin-bottom: 29px;
         }
     }
-    // ↓ p-menu-button に移行
-    // &__button {
-    //     display: none;
-    //     @include m.mq( tablet ) {
-    //         cursor: pointer;
-    //         display: block;
-    //         position: absolute;
-    //         top: 8.3%;
-    //         right: 3%;
-    //         font-size: 27px;
-    //     }
-    // }
 }
