--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,17 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
 .p-food-menu__line {
   margin-left: 3.5%;
 }
+@media (max-width: 834px) {
+  .p-food-menu__line {
+    width: 30px;
+    padding-bottom: 17px;
+  }
+}
+@media (max-width: 640px) {
+  .p-food-menu__line {
+    padding-bottom: 15px;
+  }
+}
 .p-food-menu__ul {
   color: #3C2A10;
   display: -webkit-box;
@@ -451,15 +462,23 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
 }
 .p-access__map-layer {
   background-color: rgba(0, 0, 0, 0.4);
+  position: relative;
 }
-@media (max-width: 640px) {
-  .p-access__map-layer {
-    position: relative;
+.p-access__contents-area {
+  width: 60%;
+}
+@media (max-width: 834px) {
+  .p-access__contents-area {
+    width: 100%;
   }
 }
 .p-access__bg-layer {
   width: 60%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.29);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 @media (max-width: 834px) {
   .p-access__bg-layer {
@@ -468,28 +487,27 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
 }
 @media (max-width: 640px) {
   .p-access__bg-layer {
-    background-color: rgba(0, 0, 0, 0);
+    width: 100%;
+    height: 60%;
   }
 }
 .p-access__wrapper {
+  position: relative;
+  z-index: 100;
   width: 73%;
   padding-top: 65px;
   padding-bottom: 52.5px;
-  margin-left: 12.69%;
+  margin: 0 auto;
 }
 @media (max-width: 834px) {
   .p-access__wrapper {
     width: 90%;
-    margin: 0 5%;
     padding: 30px 0;
   }
 }
 @media (max-width: 640px) {
   .p-access__wrapper {
-    position: relative;
-    z-index: 100;
     width: 80%;
-    margin: 0 10%;
   }
 }
 .p-access__title {
@@ -512,16 +530,6 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   color: #fff;
   font-size: 12.5px;
   line-height: 2.06;
-}
-@media (max-width: 640px) {
-  .p-access__bg-layer2 {
-    background-color: rgba(0, 0, 0, 0.29);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60%;
-  }
 }
 
 .p-menu-button__open {
