--- a/scss/object/project/_food-menu.scss
+++ b/scss/object/project/_food-menu.scss
@@ -4,12 +4,16 @@
 .p-food-menu {
     width: 100%;
     &__title {
-        font-size: 62.7px;
+        // font-size: 62.7px;
+        @include m.font-size(40, pc);
         margin-top: 15px;
-        margin-left: 3%;
+        margin-left: 4%;
+        @include m.mq( tablet ) {
+            font-size: 35px;
+        }
     }
     &__line {
-        margin-left: 3.5%;
+        margin-left: 4.5%;
         @include m.mq( tablet ) {
             width: 30px;
             padding-bottom: 17px;
@@ -34,7 +38,6 @@
     }
     &__li {
         width: 40%;
-        // ここでは background-size: cover にしないようにしたい
         background-position: top center;
         background-repeat: no-repeat;
         @include m.mq( tablet ) {
@@ -71,8 +74,12 @@
         }
     }
     &__dl {
+        font-size: 19px;
         margin: 3.2%;
         padding: 13px 4.27% 13px 3.24%;
+        @include m.mq( tablet ) {
+            font-size: 17px;
+        }
     }
     &__dt {
         font-family: v.$font-Mplus-Bold;
@@ -81,5 +88,8 @@
     }
     &__dd {
         font-size: 12.5px;
+        @include m.mq( tablet ) {
+            font-size: 11px;
+        }
     }
  }
