--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -15,11 +15,12 @@
         position: relative;
     }
     &__logo {
-        font-size: 50px;
+        // font-size: 50px;
+        @include m.font-size(32, pc);
         line-height: 1.325;
         margin-left: 4.18%;
         @include m.mq( tablet ) {
-            font-size: 31.36px;
+            font-size: 35px;
             margin-left: 0;
             margin-bottom: 29px;
         }
