--- a/scss/object/project/_menu-button.scss
+++ b/scss/object/project/_menu-button.scss
@@ -6,12 +6,14 @@
         display: none;
         color: v.$font-color--gray;
         @include m.mq( tablet ) {
-            // cursor: pointer;
             display: block;
             position: absolute;
             top: 8.3%;
             right: 3%;
             font-size: 27px;
+        }
+        @include m.mq( sp ) {
+            font-size: 20px;
         }
     }
     &__close {
@@ -33,10 +35,10 @@
                 background: v.$font-color--gray;
                 transition: .3s ease-in-out;
                 &:nth-child(1) {
-                    top: calc(32px / 3 - 2px); // 線の太さの半分を調整
+                    top: calc(32px / 3 - 2px); /* 線の太さの半分を調整 */
                 }
                 &:nth-child(2) {
-                    top: calc(32px / 3 * 2 - 2px); // 線の太さの半分を調整
+                    top: calc(32px / 3 * 2 - 2px); /* 線の太さの半分を調整 */
                 }
             }
         }
