アーカイブ作成

--- a/scss/object/project/_access.scss
+++ b/scss/object/project/_access.scss
@@ -46,6 +46,7 @@
       }
    }
    &__title {
+      color: v.$font-color--white;
       font-size: 28px;
       @include m.mq( tablet ) {
          font-size: 23.5px;
