--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,14 @@ li {
   font-family: "Roboto";
   /* 見出し 英語（太字） */
 }
+.c-text__sub-ttl--ja {
+  font-family: "M+ Type-1 (general-j) Bold";
+  /* 見出し 日本語（太字） */
+}
+.c-text__sub-ttl--e {
+  font-family: "Roboto";
+  /* 見出し 英語（太字） */
+}
 .c-text--ja {
   font-family: "M+ Type-1 (general-j) Regular";
   /* テキスト 日本語 */
@@ -75,10 +83,6 @@ li {
 .c-text--e {
   font-family: "M+ M Type-1 (basic latin) Regular";
   /* テキスト 英語 */
-}
-
-h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
-  color: #fff;
 }
 
 .c-line {
@@ -95,6 +99,9 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
 }
 .c-bg--white {
   background-color: rgba(255, 255, 255, 0.8);
+}
+.c-bg--black {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .c-form__input {
@@ -127,6 +134,74 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   right: 0;
   bottom: 0;
   z-index: 100;
+}
+
+.c-container {
+  width: 87%;
+  margin: 0 auto;
+  padding: 47px 0;
+}
+
+.c-card {
+  font-family: "M+ Type-1 (general-j) Bold";
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "pic title" "pic subtitle" "pic description" "pic button";
+}
+.c-card__thumbnail {
+  grid-area: pic;
+}
+.c-card__title {
+  grid-area: title;
+}
+.c-card__subtitle {
+  grid-area: subtitle;
+}
+.c-card__description {
+  font-family: "M+ Type-1 (general-j) Regular";
+  grid-area: description;
+}
+.c-card__button {
+  grid-area: button;
+}
+
+.c-pagination {
+  margin: 50px 0;
+  font-size: 12.5px;
+  color: #707070;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.c-pagination__page-count {
+  font-family: "Roboto";
+}
+.c-pagination__ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 8px;
+}
+.c-pagination__li {
+  font-family: "Roboto";
+  margin: 0 7px;
+  padding: 4px 10px;
+  border: 1px solid #707070;
+}
+.c-pagination__li:first-child, .c-pagination__li:last-child {
+  border: none;
+  margin: 0;
+}
+.c-pagination__li:nth-child(2) {
+  color: #fff;
+  background-color: #3C2B1C;
 }
 
 .p-header {
@@ -346,14 +421,54 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   }
 }
 .p-mainvisual__title {
+  color: #fff;
   font-size: 31px;
   padding-left: 5.53%;
+}
+
+.p-page-title {
+  height: 187px;
+  width: 100%;
+  background-image: url(../../../img/archive-title-pc.jpg);
+}
+.p-page-title__wrapper {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.p-page-title__main {
+  color: #fff;
+  font-size: 47px;
+  padding-left: 5.53%;
+}
+.p-page-title__sub {
+  color: #fff;
+  font-size: 12.5px;
+  padding-left: 1.3%;
+}
+
+.p-info {
+  color: #3C2A10;
+}
+.p-info__head {
+  margin-bottom: 20px;
+  font-size: 28px;
+}
+.p-info__text {
+  margin-bottom: 54px;
+  font-size: 12.5px;
 }
 
 .p-food-menu {
   width: 100%;
 }
 .p-food-menu__title {
+  color: #fff;
   font-size: 4.1666666667vw;
   margin-top: 15px;
   margin-left: 4%;
@@ -538,6 +653,7 @@ h2.c-text__ttl--ja, h2.c-text__ttl--e:not(.p-sidebar__logo) {
   }
 }
 .p-access__title {
+  color: #fff;
   font-size: 28px;
 }
 @media (max-width: 834px) {
