--- a/scss/object/component/_bg.scss
+++ b/scss/object/component/_bg.scss
@@ -5,4 +5,7 @@
     &--white {
         background-color: rgba(255,255,255,0.8);
     }
+    &--black {
+        background-color: rgba(0,0,0,0.5);
+    }
 }
