--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -9,17 +9,18 @@
             font-family: v.$font-Roboto-Bold;  /* 見出し 英語（太字） */
         }
     }
+    &__sub-ttl {
+        &--ja {
+            font-family: v.$font-Mplus-j-Bold;  /* 見出し 日本語（太字） */
+        }
+        &--e {
+            font-family: v.$font-Roboto-Bold;  /* 見出し 英語（太字） */
+        }
+    }
     &--ja {
         font-family: v.$font-Mplus-j-Regular;  /* テキスト 日本語 */
     }
     &--e {
         font-family: v.$font-Mplus-Regular;  /* テキスト 英語 */
-    }
-}
-
-h2.c-text__ttl {
-    &--ja,
-    &--e:not(.p-sidebar__logo) {
-        color: v.$font-color--white;
     }
 }
