--- a/scss/object/project/_mainvisual.scss
+++ b/scss/object/project/_mainvisual.scss
@@ -1,3 +1,4 @@
+@use "../../foundation/variable" as v;
 @use "../../foundation/mixin" as m;
 
 .p-mainvisual {
@@ -10,6 +11,7 @@
         height: 230px;
     }
     &__title {
+        color: v.$font-color--white;
         font-size: 31px;
         padding-left: 5.53%;
     }
