--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,20 @@ li {
   z-index: 100;
 }
 
+.c-contents-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: calc(100% - 187px);
+}
+
 .c-container {
   width: 87%;
   margin: 0 auto;
@@ -143,27 +157,30 @@ li {
 }
 
 .c-card {
+  width: 100%;
   font-family: "M+ Type-1 (general-j) Bold";
-  display: grid;
-  grid-template-rows: auto auto auto auto;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: "pic title" "pic subtitle" "pic description" "pic button";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 .c-card__thumbnail {
-  grid-area: pic;
+  width: 50%;
 }
-.c-card__title {
-  grid-area: title;
-}
-.c-card__subtitle {
-  grid-area: subtitle;
+.c-card__contents {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .c-card__description {
   font-family: "M+ Type-1 (general-j) Regular";
-  grid-area: description;
-}
-.c-card__button {
-  grid-area: button;
 }
 
 .c-pagination {
@@ -745,6 +762,39 @@ li {
   top: 11px;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.p-menu-card {
+  color: #fff;
+}
+.p-menu-card__thumbnail {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 50%;
+}
+.p-menu-card__contents {
+  padding: 41.5px 4.65% 0px;
+  background-color: #3C2B1C;
+}
+.p-menu-card__title {
+  margin-bottom: 41.4px;
+  font-size: 28px;
+}
+.p-menu-card__subtitle {
+  margin-bottom: 13.3px;
+  font-size: 19px;
+}
+.p-menu-card__description {
+  font-size: 12.5px;
+}
+.p-menu-card__button {
+  font-size: 12.5px;
+  display: inline-block;
+  padding: 21px 83px;
+  margin: 47px auto;
+  color: #707070;
+  background-color: #fff;
+  border-radius: 50px;
 }
 
 /* ==========================================================================
