--- a/css/style.css
+++ b/css/style.css
@@ -157,11 +157,13 @@ li {
 }
 
 .c-card {
+  position: relative;
   width: 100%;
   font-family: "M+ Type-1 (general-j) Bold";
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 23.5px;
 }
 .c-card__thumbnail {
   width: 50%;
@@ -181,6 +183,15 @@ li {
 }
 .c-card__description {
   font-family: "M+ Type-1 (general-j) Regular";
+}
+.c-card__link {
+  display: block;
+  position: absolute;
+  /* カード全体にリンク */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .c-pagination {
@@ -767,13 +778,17 @@ li {
 .p-menu-card {
   color: #fff;
 }
+.p-menu-card a {
+  color: #fff;
+}
 .p-menu-card__thumbnail {
   -o-object-fit: cover;
      object-fit: cover;
+  /* アスペクト比を維持したまま拡大縮小 */
   width: 50%;
 }
 .p-menu-card__contents {
-  padding: 41.5px 4.65% 0px;
+  padding: 41.5px 4.65% 47px;
   background-color: #3C2B1C;
 }
 .p-menu-card__title {
@@ -785,16 +800,20 @@ li {
   font-size: 19px;
 }
 .p-menu-card__description {
+  margin-bottom: 47px;
   font-size: 12.5px;
 }
 .p-menu-card__button {
   font-size: 12.5px;
   display: inline-block;
   padding: 21px 83px;
-  margin: 47px auto;
+  margin: 0 auto;
   color: #707070;
   background-color: #fff;
   border-radius: 50px;
+}
+.p-menu-card__button a {
+  color: #707070;
 }
 
 /* ==========================================================================
