--- a/scss/object/project/_menu-card.scss
+++ b/scss/object/project/_menu-card.scss
@@ -3,12 +3,15 @@
 
 .p-menu-card {
     color: v.$font-color--white;
+    a {
+        color: v.$font-color--white;
+    }
     &__thumbnail {
-        object-fit: cover;
+        object-fit: cover; /* アスペクト比を維持したまま拡大縮小 */
         width: 50%;
     }
     &__contents {
-        padding: 41.5px 4.65% 0px;
+        padding: 41.5px 4.65% 47px;
         background-color: v.$bgcolor--card;
     }
     &__title {
@@ -20,15 +23,19 @@
         font-size: 19px;
     }
     &__description {
+        margin-bottom: 47px;
         font-size: 12.5px;
     }
     &__button {
         font-size: 12.5px;
         display: inline-block;
         padding: 21px 83px;
-        margin: 47px auto;
+        margin: 0 auto;
         color: v.$font-color--gray;
         background-color: v.$font-color--white;
         border-radius: 50px;
+        a {
+            color: v.$font-color--gray;
+        }
     }
 }
