--- a/css/style.css
+++ b/css/style.css
@@ -495,31 +495,6 @@ li {
 .p-food-menu {
   width: 100%;
 }
-.p-food-menu__title {
-  color: #fff;
-  font-size: 4.1666666667vw;
-  margin-top: 15px;
-  margin-left: 4%;
-}
-@media (max-width: 834px) {
-  .p-food-menu__title {
-    font-size: 35px;
-  }
-}
-.p-food-menu__line {
-  margin-left: 4.5%;
-}
-@media (max-width: 834px) {
-  .p-food-menu__line {
-    width: 30px;
-    padding-bottom: 17px;
-  }
-}
-@media (max-width: 640px) {
-  .p-food-menu__line {
-    padding-bottom: 15px;
-  }
-}
 .p-food-menu__ul {
   color: #3C2A10;
   display: -webkit-box;
@@ -548,6 +523,18 @@ li {
   }
 }
 .p-food-menu__li {
+  position: relative;
+  min-height: 900px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 40%;
   background-position: top center;
   background-repeat: no-repeat;
@@ -555,6 +542,7 @@ li {
 @media (max-width: 834px) {
   .p-food-menu__li {
     width: 43%;
+    min-height: 600px;
   }
 }
 @media (max-width: 640px) {
@@ -580,26 +568,39 @@ li {
     margin-top: 20px;
   }
 }
-.p-food-menu__li a {
-  min-height: 900px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  color: #3C2A10;
+.p-food-menu__title {
+  color: #fff;
+  font-size: 4.1666666667vw;
+  margin-top: 15px;
+  margin-left: 4%;
 }
 @media (max-width: 834px) {
-  .p-food-menu__li a {
-    min-height: 600px;
+  .p-food-menu__title {
+    font-size: 35px;
   }
+}
+.p-food-menu__line {
+  margin-left: 4.5%;
+}
+@media (max-width: 834px) {
+  .p-food-menu__line {
+    width: 30px;
+    padding-bottom: 17px;
+  }
+}
+@media (max-width: 640px) {
+  .p-food-menu__line {
+    padding-bottom: 15px;
+  }
+}
+.p-food-menu__link {
+  display: block;
+  position: absolute;
+  /* li全体にリンク */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .p-food-menu__dl {
   font-size: 19px;
@@ -778,9 +779,6 @@ li {
 .p-menu-card {
   color: #fff;
 }
-.p-menu-card a {
-  color: #fff;
-}
 .p-menu-card__thumbnail {
   -o-object-fit: cover;
      object-fit: cover;
@@ -811,9 +809,6 @@ li {
   color: #707070;
   background-color: #fff;
   border-radius: 50px;
-}
-.p-menu-card__button a {
-  color: #707070;
 }
 
 /* ==========================================================================
