--- a/scss/object/project/_food-menu.scss
+++ b/scss/object/project/_food-menu.scss
@@ -3,6 +3,51 @@
 
 .p-food-menu {
     width: 100%;
+    &__ul {
+        color: v.$font-color--brown;
+        display: flex;
+        justify-content: center;
+        margin: 94px auto 105px;
+        @include m.mq( tablet ) {
+            margin: 4.8% 0;
+        }
+        @include m.mq( sp ) {
+            flex-direction: column;
+            align-items: center;
+            margin: 5.3% 0;
+        }
+    }
+    &__li {
+        position: relative;
+        min-height: 900px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 40%;
+        background-position: top center;
+        background-repeat: no-repeat;
+        @include m.mq( tablet ) {
+            width: 43%;
+            min-height: 600px;
+        }
+        @include m.mq( sp ) {
+            width: 89%;
+        }
+        &:first-child {
+            background-image: url(../../../img/takeout-pc.jpg);
+        }
+        &:nth-child(2) {
+            background-image: url(../../../img/eatin-pc.jpg);
+            margin-left: 5.15%;
+            @include m.mq( tablet ) {
+                margin-left: 4.8%;
+            }
+            @include m.mq( sp ) {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+        }
+    }
     &__title {
         // font-size: 62.7px;
         color: v.$font-color--white;
@@ -23,56 +68,13 @@
             padding-bottom: 15px;
         }
     }
-    &__ul {
-        color: v.$font-color--brown;
-        display: flex;
-        justify-content: center;
-        margin: 94px auto 105px;
-        @include m.mq( tablet ) {
-            margin: 4.8% 0;
-        }
-        @include m.mq( sp ) {
-            flex-direction: column;
-            align-items: center;
-            margin: 5.3% 0;
-        }
-    }
-    &__li {
-        width: 40%;
-        background-position: top center;
-        background-repeat: no-repeat;
-        @include m.mq( tablet ) {
-            width: 43%;
-        }
-        @include m.mq( sp ) {
-            width: 89%;
-        }
-        &:first-child {
-            background-image: url(../../../img/takeout-pc.jpg);
-        }
-        &:nth-child(2) {
-            background-image: url(../../../img/eatin-pc.jpg);
-            margin-left: 5.15%;
-            @include m.mq( tablet ) {
-                margin-left: 4.8%;
-            }
-            @include m.mq( sp ) {
-                margin-left: 0;
-                margin-top: 20px;
-            }
-        }
-        a {
-            min-height: 900px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            width: 100%;
-            height: 100%;
-            color: v.$font-color--brown;
-            @include m.mq( tablet ) {
-                min-height: 600px;
-            }
-        }
+    &__link {
+        display: block;
+        position: absolute; /* li全体にリンク */
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
     &__dl {
         font-size: 19px;
