--- a/css/style.css
+++ b/css/style.css
@@ -149,11 +149,27 @@ li {
           justify-content: space-between;
   height: calc(100% - 187px);
 }
+@media (max-width: 834px) {
+  .c-contents-wrapper {
+    height: calc(100% - 222px);
+  }
+}
 
 .c-container {
   width: 87%;
   margin: 0 auto;
   padding: 47px 0;
+}
+@media (max-width: 834px) {
+  .c-container {
+    width: 90%;
+    padding: 28px 0;
+  }
+}
+@media (max-width: 640px) {
+  .c-container {
+    padding: 23.5px 0;
+  }
 }
 
 .c-card {
@@ -165,8 +181,26 @@ li {
   display: flex;
   margin-bottom: 23.5px;
 }
+@media (max-width: 834px) {
+  .c-card {
+    margin-bottom: 16px;
+  }
+}
+@media (max-width: 640px) {
+  .c-card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 .c-card__thumbnail {
   width: 50%;
+}
+@media (max-width: 640px) {
+  .c-card__thumbnail {
+    width: 100%;
+  }
 }
 .c-card__contents {
   width: 50%;
@@ -180,6 +214,11 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media (max-width: 640px) {
+  .c-card__contents {
+    width: 100%;
+  }
 }
 .c-card__description {
   font-family: "M+ Type-1 (general-j) Regular";
@@ -207,6 +246,11 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 834px) {
+  .c-pagination {
+    margin: 23.5px 0;
+  }
 }
 .c-pagination__page-count {
   font-family: "Roboto";
@@ -451,13 +495,35 @@ li {
 .p-mainvisual__title {
   color: #fff;
   font-size: 31px;
-  padding-left: 5.53%;
+  padding-left: 67.4px;
+}
+@media (max-width: 834px) {
+  .p-mainvisual__title {
+    font-size: 28px;
+  }
+}
+@media (max-width: 640px) {
+  .p-mainvisual__title {
+    padding-left: 20px;
+  }
 }
 
 .p-page-title {
   height: 187px;
   width: 100%;
   background-image: url(../../../img/archive-title-pc.jpg);
+}
+@media (max-width: 834px) {
+  .p-page-title {
+    height: 222px;
+    background-image: url(../../../img/archive-title-ipad.jpg);
+  }
+}
+@media (max-width: 640px) {
+  .p-page-title {
+    background-size: auto;
+    background-position: left center;
+  }
 }
 .p-page-title__wrapper {
   width: 100%;
@@ -469,15 +535,42 @@ li {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 640px) {
+  .p-page-title__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+    padding-left: 29px;
+  }
+}
 .p-page-title__main {
   color: #fff;
   font-size: 47px;
-  padding-left: 5.53%;
+  padding-left: 67.4px;
+}
+@media (max-width: 640px) {
+  .p-page-title__main {
+    padding-left: 0;
+    font-size: 28px;
+  }
 }
 .p-page-title__sub {
   color: #fff;
   font-size: 12.5px;
-  padding-left: 1.3%;
+  padding-left: 15.7px;
+}
+@media (max-width: 640px) {
+  .p-page-title__sub {
+    padding-left: 0;
+    font-size: 12.5px;
+  }
 }
 
 .p-info {
@@ -487,9 +580,29 @@ li {
   margin-bottom: 20px;
   font-size: 28px;
 }
+@media (max-width: 834px) {
+  .p-info__head {
+    margin-bottom: 19.6px;
+  }
+}
+@media (max-width: 640px) {
+  .p-info__head {
+    margin-bottom: 23.5px;
+  }
+}
 .p-info__text {
   margin-bottom: 54px;
   font-size: 12.5px;
+}
+@media (max-width: 834px) {
+  .p-info__text {
+    margin-bottom: 29px;
+  }
+}
+@media (max-width: 640px) {
+  .p-info__text {
+    margin-bottom: 15px;
+  }
 }
 
 .p-food-menu {
@@ -783,23 +896,50 @@ li {
   -o-object-fit: cover;
      object-fit: cover;
   /* アスペクト比を維持したまま拡大縮小 */
-  width: 50%;
+}
+@media (max-width: 640px) {
+  .p-menu-card__thumbnail {
+    max-height: 250px;
+  }
 }
 .p-menu-card__contents {
   padding: 41.5px 4.65% 47px;
   background-color: #3C2B1C;
 }
+@media (max-width: 834px) {
+  .p-menu-card__contents {
+    padding: 23px 4.6% 31px;
+  }
+}
 .p-menu-card__title {
-  margin-bottom: 41.4px;
+  margin-bottom: 36.9px;
   font-size: 28px;
+}
+@media (max-width: 834px) {
+  .p-menu-card__title {
+    margin-bottom: 19px;
+    font-size: 15.7px;
+  }
 }
 .p-menu-card__subtitle {
   margin-bottom: 13.3px;
   font-size: 19px;
 }
+@media (max-width: 834px) {
+  .p-menu-card__subtitle {
+    margin-bottom: 7.84px;
+    font-size: 12.5px;
+  }
+}
 .p-menu-card__description {
   margin-bottom: 47px;
   font-size: 12.5px;
+}
+@media (max-width: 834px) {
+  .p-menu-card__description {
+    margin-bottom: 31px;
+    font-size: 12.5px;
+  }
 }
 .p-menu-card__button {
   font-size: 12.5px;
@@ -809,6 +949,11 @@ li {
   color: #707070;
   background-color: #fff;
   border-radius: 50px;
+}
+@media (max-width: 834px) {
+  .p-menu-card__button {
+    padding: 8px 32px;
+  }
 }
 
 /* ==========================================================================
