--- a/scss/object/component/_card.scss
+++ b/scss/object/component/_card.scss
@@ -1,4 +1,5 @@
 @use "../../foundation/variable" as v;
+@use "../../foundation/mixin" as m;
 
 .c-card {
     position: relative;
@@ -6,14 +7,27 @@
     font-family: v.$font-Mplus-j-Bold;
     display: flex;
     margin-bottom: 23.5px;
+    @include m.mq( tablet ) {
+        margin-bottom: 16px;
+    }
+    @include m.mq( sp ) {
+        flex-direction: column;
+    }
     &__thumbnail {
         width: 50%;
+        // border: 1px solid v.$font-color--gray;
+        @include m.mq( sp ) {
+            width: 100%;
+        }
     }
     &__contents {
         width: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        @include m.mq( sp ) {
+            width: 100%;
+        }
     }
     &__description {
         font-family: v.$font-Mplus-j-Regular;
