--- a/scss/object/component/_pagination.scss
+++ b/scss/object/component/_pagination.scss
@@ -1,4 +1,5 @@
 @use "../../foundation/variable" as v;
+@use "../../foundation/mixin" as m;
 
 .c-pagination {
     margin: 50px 0;
@@ -7,6 +8,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include m.mq( tablet ) {
+        margin: 23.5px 0;
+    }
     &__page-count {
         font-family: v.$font-Roboto-Bold;
     }
