--- a/scss/object/project/_page-title.scss
+++ b/scss/object/project/_page-title.scss
@@ -5,23 +5,42 @@
     height: 187px;
     width: 100%;
     background-image: url(../../../img/archive-title-pc.jpg);
-    // @include m.mq( tablet ) {
-    //     height: 230px;
-    // }
+    @include m.mq( tablet ) {
+        height: 222px;
+        background-image: url(../../../img/archive-title-ipad.jpg);
+    }
+    @include m.mq( sp ) {
+        background-size: auto;
+        background-position: left center;
+    }
     &__wrapper {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center; 
+        @include m.mq( sp ) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: normal;
+            padding-left: 29px;
+        }
     }
     &__main {
         color: v.$font-color--white;
         font-size: 47px;
-        padding-left: 5.53%;
+        padding-left: 67.4px;
+        @include m.mq( sp ) {
+            padding-left: 0;
+            font-size: 28px;
+        }
     }
     &__sub {
         color: v.$font-color--white;
         font-size: 12.5px;
-        padding-left: 1.3%;
+        padding-left: 15.7px;
+        @include m.mq( sp ) {
+            padding-left: 0;
+            font-size: 12.5px;
+        }
     }
 }
