--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -7,6 +7,7 @@ $font-color--brown: #3C2A10;
 $bgcolor--header: #FFF7EF;
 $bgcolor--sidebar: #F2EDE9;
 $bgcolor--card: #3C2B1C;
+$bgcolor--contents: #FFFDFA;
 
 // 日本語フォント
 $font-Mplus-j-Regular: 'M+ Type-1 (general-j) Regular';
