--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -2,12 +2,14 @@
 $font-color--gray: #707070;
 $font-color--white: #fff;
 $font-color--brown: #3C2A10;
+$font-color--bluegray: #4A6C9B;
 
 // 背景カラー
 $bgcolor--header: #FFF7EF;
 $bgcolor--sidebar: #F2EDE9;
 $bgcolor--card: #3C2B1C;
 $bgcolor--contents: #FFFDFA;
+$bgcolor--blockquote: #F5F5F5;
 
 // 日本語フォント
 $font-Mplus-j-Regular: 'M+ Type-1 (general-j) Regular';
