--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@
 @use "object/component/form";
 @use "object/component/button";
 @use "object/component/overlay";
+@use "object/component/titlevisual";
 @use "object/component/contents-wrapper";
 @use "object/component/container";
 @use "object/component/card";
@@ -37,7 +38,9 @@
 @use "object/project/search-form";
 @use "object/project/mainvisual";
 @use "object/project/page-title";
+@use "object/project/single-titlevisual";
 @use "object/project/info";
+@use "object/project/article";
 @use "object/project/food-menu";
 @use "object/project/access";
 @use "object/project/menu-button";
