--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -9,7 +9,7 @@ $bgcolor--header: #FFF7EF;
 $bgcolor--sidebar: #F2EDE9;
 $bgcolor--card: #3C2B1C;
 $bgcolor--contents: #FFFDFA;
-$bgcolor--blockquote: #F5F5F5;
+$bgcolor--block: #F5F5F5;
 
 // 日本語フォント
 $font-Mplus-j-Regular: 'M+ Type-1 (general-j) Regular';
