--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -3,11 +3,13 @@
 body {
     background-color: v.$bgcolor--contents;
 }
+h5,h6 {
+    margin: 0;
+}
 a {
     text-decoration: none;
 }
-ol,
-ul {
+ol,ul {
     padding: 0;
     margin: 0;
     list-style: none;
