--- a/scss/object/project/_article.scss
+++ b/scss/object/project/_article.scss
@@ -5,32 +5,41 @@
     font-family: v.$font-Mplus-j-Regular;
     font-size: 12.5px;
     color: v.$font-color--brown;
+    &__container {
+        @include m.mq( tablet ) {
+            width: 85.6%;
+            padding: 47px 0;
+        }
+        @include m.mq( sp ) {
+            padding: 23.5px 0;
+        }
+    }
     h2,h3,h4,h5,h6 {
         font-family: v.$font-Mplus-j-Bold;
         margin-bottom: 47px;
-    }
-    h2 {
-        font-size: 28px;
-        @include m.mq( tablet ) {
-            margin-bottom: 19.6px;
-        }
         @include m.mq( sp ) {
             margin-bottom: 23.5px;
         }
     }
+    h2 {
+        font-size: 28px;
+        @include m.mq( sp ) {
+            font-size: 22px;
+        }
+    }
     h3 {
         font-size: 22px;
+        @include m.mq( sp ) {
+            font-size: 19px;
+        }
     }
     h4,h5,h6 {
         font-size: 15.7px;
     }
     p {
         margin-bottom: 47px;
-        @include m.mq( tablet ) {
-            margin-bottom: 29px;
-        }
         @include m.mq( sp ) {
-            margin-bottom: 15px;
+            margin-bottom: 23.5px;
         }
         &.text-right {
             margin-left: 3%;
@@ -49,9 +58,16 @@
         background-color: v.$bgcolor--block;
         padding: 39px;
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            padding: 23.5px 15.7px;
+            margin-bottom: 23.5px;
+        }
     }
     img {
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            margin-bottom: 23.5px;
+        }
         &.big {
             max-width: 100%;
         }
@@ -77,6 +93,9 @@
     }
     div {
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            margin-bottom: 23.5px;
+        }
         &.flex-row {
             display: flex;
             align-items: flex-start;
@@ -90,23 +109,24 @@
             row-gap: 15.7px;
         }
     }
-    ol {
-        padding-left: 50px;
+    ol,ul {
         margin-bottom: 15.7px;
         &.decimal {
             list-style-type: decimal;
         }
-        &.outside {
-            list-style-position: outside;
-        }
-        &.inside {
+        &.first {
             list-style-position: inside;
+            padding-left: 39px;
+            @include m.mq( sp ) {
+                padding-left: 0;
+            }
         }
-        &.outside-none {
-            padding-left: 25px;
-        }
-        &.inside-none {
-            padding-left: 50px;
+        &.second {
+            list-style-position: inside;
+            padding-left: 55px;
+            @include m.mq( sp ) {
+                padding-left: 16px;
+            }
         }
     }
     code {
@@ -116,6 +136,9 @@
         background-color: v.$bgcolor--block;
         padding: 39px;
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            margin-bottom: 23.5px;
+        }
     }
     pre {
         font-family: v.$font-Mplus-Regular;
@@ -128,6 +151,9 @@
     table {
         width: 100%;
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            margin-bottom: 23.5px;
+        }
     }
     td {
         height: 60px;
@@ -141,13 +167,21 @@
     }
     .center {
         margin: 0 auto 47px;
+        @include m.mq( sp ) {
+            margin: 0 auto 23.5px;
+        }
     }
     &__button {
-        width: 31.7%;
+        width: 336px;
         height: 81.5px;
         border-radius: 1.3em;
         background-image: linear-gradient(0deg, #DED8D3, #F2EDE9);
         font-family: v.$font-Mplus-j-Bold;
         margin-bottom: 47px;
+        @include m.mq( sp ) {
+            margin-bottom: 23.5px;
+            max-width: 100%;
+            height: 63.5px;
+        }
     }
 }
