--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@
 @use "object/project/mainvisual";
 @use "object/project/page-title";
 @use "object/project/single-titlevisual";
+@use "object/project/page-titlevisual";
 @use "object/project/info";
 @use "object/project/article";
 @use "object/project/food-menu";
